FIX: Add missing margin to new 'Create new collection' form.
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10573 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1016,7 +1016,8 @@ div.video-js {margin:auto;}
 #modal .BasicsBox .HelpHeader .backtoresults { margin-top: 15px; }
 
 #modal form {
-    min-width: 600px;    
+    min-width: 600px;
+    margin-bottom: 10px;
     }
 /* Dropdown Actions */
 #CollectionMenu .ActionsContainer {
